<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.syshuman.kadir.fouriertransform.Scope
        android:id="@+id/scope"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/spectrum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <com.syshuman.kadir.fouriertransform.Spectrum
        android:id="@+id/spectrum"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/adLayout"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc"
            android:src="@android:drawable/ic_btn_speak_now" />

        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc"
            android:scaleType="fitEnd"
            android:src="@android:drawable/ic_dialog_info" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lo1"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rpAmpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Ampl" />

        <RadioButton
            android:id="@+id/rbPhas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phas" />

        <RadioButton
            android:id="@+id/rbReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Real" />

        <RadioButton
            android:id="@+id/rbImag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imag" />
    </RadioGroup>



</RelativeLayout>